assets/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "";
}

body {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #f5e5fc;
    min-height: 100vh;
    min-width: 100vw;
}

.gameArea {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: #48b8d0;
    padding: 4rem;
    min-width: 20rem;
    max-width: 20rem; 
    /*to stop the cards from changing size with different words*/
    /* Setting min and max width works but not responsive */
    /* All boxes are jumping around during gameplay - want all fixed. */
    max-height: 20rem;
    min-height: 20rem; 
    border-radius: 5px;
}

/*Need to wrap contents of game area in div and space out*/

.div_scoreBoard {
    font-family: arial; /*TEST checking can style score*/
    background-color: purple; 
    color: white; 
}

/* Varied by changing CSS from tutorial  */
.btn_start {
    border-radius: 4px;
    border: none;
    padding: 0.75rem;
    margin: 5px 5px;
    width: 7rem;
}

/* To add hover color change to button */
.btn_start:hover {
    background-color: ""; 
}

/*Created class .click_button so can target text*/
.click_button {
    text-align: center;
    background-color: pink;
    margin: 5px 5px;
    width: 7rem;
    border-radius: 5px; 

}

.myInput {
    letter-spacing: 0.1rem;
    max-width: 4.7rem;
    max-height: 3rem;
    font-size: 1.5rem;
    text-align: center; 
    border-radius: 5px;
    padding: 0.2rem;
    margin: 5px 5px; 
}

